[workspace]
members = [
  "karabinux"
]

[package]
name = "karabinux_cli"
version = "0.1.0"
authors = ["acheronfail <acheronfail@gmail.com>"]
edition = "2018"
build = "build.rs"

[[bin]]
path = "src/main.rs"
name = "karabinux"

[features]
default = ["viewer"]
viewer = [
  "gdk",
  "gtk",
  "gio",
  "glib",
  "chrono"
]

[dependencies]
evdev-rs = { git = "https://github.com/ndesh26/evdev-rs" }
karabinux = { path = "./karabinux" }
libc = "^0.2.36"
structopt = "0.2"
gdk = { version = "0.10.0", optional = true }
gtk = { version = "0.6.0", optional = true }
gio = { version = "0.6.0", optional = true }
glib = { version = "0.7.0", optional = true }
chrono = { version = "0.4.6", optional = true }

[dev-dependencies]
pretty_assertions = "0.6.1"
