[workspace]
members = [
  "karabinux"
]

[package]
name = "karabinux_cli"
version = "0.1.0"
authors = ["acheronfail <acheronfail@gmail.com>"]
edition = "2018"
build = "build.rs"
description = """
Karabinux (kbx) is a powerful utility for keyboard customization on linux
platforms that use the libevdev protocol. It provides many different actions
and remappings and supports configuration files from Karabiner-Elements.
"""

[[bin]]
path = "src/main.rs"
name = "kbx"

[features]
default = []
viewer = [
  "gdk",
  "gtk",
  "gio",
  "glib",
  "chrono"
]

[dependencies]
evdev-rs = { git = "https://github.com/ndesh26/evdev-rs" }
karabinux = { path = "./karabinux" }
libc = "^0.2.36"
structopt = "0.2"
gdk = { version = "0.10.0", optional = true }
gtk = { version = "0.6.0", optional = true }
gio = { version = "0.6.0", optional = true }
glib = { version = "0.7.0", optional = true }
chrono = { version = "0.4.6", optional = true }

[dev-dependencies]
pretty_assertions = "0.6.1"
