[package]
name = "emitter"
version = "0.1.0"
authors = ["acheronfail <acheronfail@gmail.com>"]
edition = "2018"
description = "A program that's responsible for receiving events from stdin and sending them to a virtual uinput device"
build = "../build.rs"

[dependencies]
evdev-rs = { git = "https://github.com/ndesh26/evdev-rs" }
karabinux = { path = "../karabinux" }
libc = "^0.2.36"
structopt = "0.2"
