[package]
name = "grabber"
version = "0.1.0"
authors = ["acheronfail <acheronfail@gmail.com>"]
edition = "2018"
description = "A program that's responsible for grabbing events from a device and emitting them to stdout"
build = "../build.rs"

[[bin]]
path = "src/main.rs"
name = "grabber"
doc = false

[features]
default = ["viewer"]
viewer = [
  "gdk",
  "gtk",
  "gio",
  "glib",
  "chrono"
]

[dependencies]
evdev-rs = { git = "https://github.com/ndesh26/evdev-rs" }
karabinux = { path = "../karabinux" }
libc = "^0.2.36"
structopt = "0.2"
gdk = { version = "0.10.0", optional = true }
gtk = { version = "0.6.0", optional = true }
gio = { version = "0.6.0", optional = true }
glib = { version = "0.7.0", optional = true }
chrono = { version = "0.4.6", optional = true }
