[package]
name = "karabinux"
version = "0.1.0"
authors = ["acheronfail"]
edition = "2018"
description = "A shared library for karabinux"
build = "../build.rs"

[dependencies]
evdev-rs = { git = "https://github.com/acheronfail/evdev-rs/", branch = "feat/uinput" }
libc = "^0.2.36"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
