[package]
name = "karabinux"
version = "0.1.0"
authors = ["acheronfail"]
edition = "2018"
description = "A shared library for karabinux"
build = "../build.rs"

[dependencies]
evdev-rs = { git = "https://github.com/ndesh26/evdev-rs/" }
linked_hash_set = "0.1.3"
libc = "^0.2.36"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dev-dependencies]
pretty_assertions = "0.6.1"
